--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,22 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --no-notify --transpileOnly --ignore-watch node_modules src/server.ts",
+    "dev:server": "NODE_ENV=dev ts-node-dev --inspect --no-notify --transpileOnly --ignore-watch node_modules src/server.ts",
     "start": "ts-node src/index.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/multer": "^1.4.3",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.12.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.0.2",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.24",
