--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -31,6 +31,7 @@
     "rules": {
       "react/jsx-props-no-spreading": "off",
       "@typescript-eslint/explicit-module-boundary-types": "off",
+      "no-unused-expressions": "off",
       "react/prop-types": "off",
       "prettier/prettier": "error",
       "react/jsx-wrap-multilines": ["error", {"declaration": false, "assignment": false}],
