--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/multer": "^1.4.3",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.12.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
