--- a/appgobarber/.eslintrc.json
+++ b/appgobarber/.eslintrc.json
@@ -27,6 +27,8 @@
     "prettier"
   ],
   "rules": {
+    "@typescript-eslint/no-unused-vars": "warn",
+    "no-unused-vars": "off",
     "react/jsx-props-no-spreading": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "no-unused-expressions": "off",
