--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -3,8 +3,8 @@
   "host": "localhost",
   "port": 5432,
   "username": "postgres",
-  "password": "docker",
-  "database": "gostack_gobarber",
+  "password": "gobarber",
+  "database": "gobarber",
   "entities": [
     "./src/models/*.ts"
   ],
